docs(1101): update docs

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ ipython==6.4.0
 ipython-genutils==0.2.0
 jedi==0.12.1
 kiwisolver==1.0.1
-matplotlib==2.2.2
+matplotlib>=2.2.2
 numpy==1.14.5
 parso==0.3.1
 pexpect==4.6.0
@@ -26,7 +26,7 @@ pytz==2018.5
 requests==2.19.1
 simplegeneric==0.8.1
 six==1.11.0
-torch==0.4.0
+torch>=0.4.0
 traitlets==4.3.2
 urllib3==1.23
 wcwidth==0.1.7
